# gdrpi

./: .gitmodules  README.md  install_rust_rocket_svelte.sh  rpi4_serial_command_interpreter.sh  rpi4_serial_test.sh
FrontEnd-Login/: README.md
FrontEnd-Login/src/: App.svelte
MasterFrontEnd/: package-lock.json
MasterFrontEnd/public/: bundle.css  bundle.css.map  bundle.js  bundle.js.map
MasterFrontEnd/src/: Login.svelte  main.js
PrometheusMetrics/: README.md  metrics  node_exporter.service  prometheus.service  prometheus.yml
rpi4/: rpi4_serial_test.sh
rpi4/rust-serial-demo/: Cargo.toml  README.md
rpi4/rust-serial-demo/examples/: receive_data.rs
rpi4/rust-wasm-test/: README.md
rpi4/rust-wasm-test/src/: command.rs  lib.rs
rust-serial-demo/: README.md
rust-serial-demo/examples/: command.rs
rust-wasm-test/: Cargo.toml  README.md  index.html
