[package]
name = "serial-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
clap = "2.32"

[features]
default = ["libudev"]

[dev-dependencies]
clap = "2.32"

[target."cfg(unix)".dependencies]
nix = "0.16.1"
bitflags = "1.0.4"
cfg-if = "0.1"

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libudev = { version = "0.2.0", optional = true }

[target."cfg(windows)".dependencies]
regex = "1.0"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.6"
features = ["cguid", "commapi", "errhandlingapi", "fileapi", "guiddef", "handleapi", "minwinbase",
            "minwindef", "ntdef", "setupapi", "winbase", "winerror", "winnt"]

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
IOKit-sys = "0.1"
mach = "0.2"
CoreFoundation-sys = "0.1.3"
